[tool.poetry]
name = "custom auth"
version = "0.1.0"
description = ""
authors = ["Vladislav <barabayne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
pydantic-settings = "^2.5.2"
ruff = "^0.6.9"
pre-commit = "^4.0.1"
uvicorn = "^0.31.1"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
